--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "bootstrap-icons": "^1.11.3",
         "inputmask": "^5.0.9"
     }
 }
